fixes #478, optimize update process on all OS

--- a/resources/templates/etc/appserver/appserver.xml.phtml
+++ b/resources/templates/etc/appserver/appserver.xml.phtml
@@ -216,6 +216,7 @@ use AppserverIo\Appserver\Meta\Composer\Script\SetupKeys;
                         <param name="keepAliveMax" type="integer">64</param>
                         <param name="keepAliveTimeout" type="integer">5</param>
                         <param name="errorsPageTemplatePath" type="string">var/www/errors/error.phtml</param>
+                        <param name="welcomePageTemplatePath" type="string">var/www/errors/welcome.phtml</param>
                     </params>
 
                     <environmentVariables>
@@ -318,6 +319,7 @@ use AppserverIo\Appserver\Meta\Composer\Script\SetupKeys;
                         <param name="keepAliveMax" type="integer">64</param>
                         <param name="keepAliveTimeout" type="integer">5</param>
                         <param name="errorsPageTemplatePath" type="string">var/www/errors/error.phtml</param>
+                        <param name="welcomePageTemplatePath" type="string">var/www/errors/welcome.phtml</param>
                     </params>
 
                     <environmentVariables>
