--- a/_layouts/tutorial.html
+++ b/_layouts/tutorial.html
@@ -13,9 +13,16 @@
                 </div>
                 <!-- Content Section -->
                 <div class="col-md-9 content">
-                    <h1><i class="fa fa-book"></i> {% if page.group and page.group != "Get Started" %}<small>{{ page.group }} / </small>{% endif %}{{ page.title }}</h1><hr/>
+                    <h1><i class="fa fa-book"></i> {% if page.group and page.group != "Get Started" %}<small>{{ page.group }} / </small>{% endif %}{{ page.title }}</h1>
+                    {% if page.author %}
+                        <a href="https://github.com/{{ post.author }}" class="post-author"><img src="https://github.com/{{ page.author }}.png" class="avatar img-circle" alt="{{ page.author }}" width="24" height="24" /> {{ page.author }}</a> {% if page.date %}<i class="fa fa-clock-o"></i> Posted on {{ page.date | date_to_string }}{% endif %}
+                    {% endif %}
+                    
+                    <hr/>
                     <div class="docs-content">
                         {{ content }}
+                        <p><br/></p>
+                        <div id="disqus_thread"></div>
                     </div>
                 </div>
             </div>
@@ -23,6 +30,7 @@
         </div>
     </div>
     <!-- /.container -->
+    {% include disqus_embed.html %}
     {% include footer.html %}
 </body>
 </html>
