--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width initial-scale=1">
-  <title>{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }}</title>
+  <title>{% if page.meta_title %}{{ page.meta_title }}{% else %}{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }}{% endif %}</title>
 
   {% for redirect in site.redirects %}
   {% if redirect.url == page.url %}
@@ -11,7 +11,7 @@
   {% endif %}
   {% endfor %}
 
-  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+  <meta name="description" content="{% if page.meta_description %}{{ page.meta_description }}{% else %}{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}{% endif %}">
 
   <link rel="icon" type="image/png" href="/favicon.png">
 
