[website] Link to /get-started/downloads.html#debian doesn't open the Debian folder fixes #527

--- a/_includes/widgets/download.html
+++ b/_includes/widgets/download.html
@@ -33,3 +33,16 @@
         {% endfor %}
     </div>
 </div>
+
+<!-- Script to open specific tab by given location.hash -->
+<script>
+$(function () {
+    var activeTab = $('[href=' + location.hash + ']');
+    activeTab && activeTab.tab('show');
+
+    $('.nav-tabs a').on('click', function (e) {
+        var newhash = $(e.target).attr('href');
+        window.location.hash = newhash;
+    });
+});
+</script>
