fixed gitter footer link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,7 +26,7 @@
 
       <div class="social col-md-6 col-xs-7 text-right">
         <ul class="list-inline">
-          <li><a href="{{ site.github_repository }}" target="_blank"><i class="fa fa-weixin fa-2x"></i></a></li>
+          <li><a href="{{ site.github_gitter }}" target="_blank"><i class="fa fa-weixin fa-2x"></i></a></li>
           <li><a href="{{ site.github_repository }}" target="_blank"><i class="fa fa-github-square fa-2x"></i></a></li>
           <li><a href="https://twitter.com/php_appserver" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a></li>
           <li><a href="https://www.facebook.com/appserver.io" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a></li>
