changed the CE page

--- a/_sass/_sections.scss
+++ b/_sass/_sections.scss
@@ -32,6 +32,10 @@ section.darkgrey {
   color: #fafafa;
 }
 
+section.midgrey {
+  background-color: #dddddd;
+}
+
 section.red {
   background-color: #a82629;
   color: #fafafa;
