refactored slider due to version 1.0.0 release

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -61,7 +61,7 @@
 <!-- Script to Activate the Carousel -->
 <script>
 $('.carousel').carousel({
-  interval: 5000 //changes the speed
+  interval: 8888
 })
 
 $(function () {
