--- a/_includes/widgets/download.html
+++ b/_includes/widgets/download.html
@@ -14,8 +14,8 @@
     <div class="tab-content">
         {% for download in site.data.downloads %}
             <div class="tab-pane fade {% if forloop.first %}active in{% endif %}" id="{{ download.id }}">
-                {% capture distname %}{{ site.appserver_download_dist_prefix }}{{ site.appserver_version }}{{ download.dist-suffix }}{% endcapture %}
-                {% capture runtimename %}{{ site.appserver_download_runtime_prefix }}{{ site.appserver_runtime_version }}{{ download.runtime-suffix }}{% endcapture %}
+                {% capture distname %}{{ site.appserver_download_dist_prefix }}{{ download.separator }}{{ site.appserver_version }}{{ download.dist-suffix }}{% endcapture %}
+                {% capture runtimename %}{{ site.appserver_download_runtime_prefix }}{{ download.separator }}{{ site.appserver_runtime_version }}{{ download.runtime-suffix }}{% endcapture %}
                 {% capture downloadcontent %}{% include downloads/content.md %}{% endcapture %}
                 {{ downloadcontent | markdownify }}
                 <hr>
