--- a/resources/templates/etc/appserver/appserver.xml.phtml
+++ b/resources/templates/etc/appserver/appserver.xml.phtml
@@ -25,13 +25,14 @@ use AppserverIo\Appserver\Meta\Composer\Script\SetupKeys;
 
     <params>
         <!--
-        <param name="log.dir" type="string">/var/log</param>
-        <param name="run.dir" type="string">/var/run</param>
-        <param name="tmp.dir" type="string">/var/tmp</param>
+        <param name="tmp.dir" type="string">/tmp</param>
         <param name="deploy.dir" type="string">/deploy</param>
         <param name="webapps.dir" type="string">/webapps</param>
-        <param name="conf.dir" type="string">/etc/appserver</param>
-        <param name="confd.dir" type="string">/etc/appserver/conf.d</param>
+        <param name="var.log.dir" type="string">/var/log</param>
+        <param name="var.run.dir" type="string">/var/run</param>
+        <param name="var.tmp.dir" type="string">/var/tmp</param>
+        <param name="etc.appserver.dir" type="string">/etc/appserver</param>
+        <param name="etc.appserver.confd.dir" type="string">/etc/appserver/conf.d</param>
         -->
         <param name="user" type="string"><?php echo Setup::getValue(SetupKeys::USER) ?></param>
         <param name="group" type="string"><?php echo Setup::getValue(SetupKeys::GROUP) ?></param>
