--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,7 +30,7 @@
           <li><a href="{{ site.github_repository }}" target="_blank"><i class="fa fa-github-square fa-2x"></i></a></li>
           <li><a href="https://twitter.com/php_appserver" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a></li>
           <li><a href="https://www.facebook.com/appserver.io" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a></li>
-
+          <li><a href="https://plus.google.com/117907014166822334259" rel="publisher"><i class="fa fa-google-plus-square fa-2x"></i></a></li>
           <li class="row-end"><a href="{{ "/feed.xml" | prepend: site.baseurl }}"><i class="fa fa-rss-square fa-2x"></i></a></li>
         </ul>
         <br>
