added bitnami pinup

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,5 @@
+<iframe class="bitnami-pinup" allowTransparency="true" frameborder="0" scrolling="no" src="https://bitnami.com/product/appserverio/widget" style="border:none;width:230px; height:100px;"></iframe>
+
 <!-- Navigation -->
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
   <div class="container">
