fixed bitnami integration to be just on Home site

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,6 @@
+{% if page.title == 'Home'%}
 <iframe class="bitnami-pinup" allowTransparency="true" frameborder="0" scrolling="no" src="https://bitnami.com/product/appserverio/widget" style="border:none;width:230px; height:100px;"></iframe>
+{% endif %}
 
 <!-- Navigation -->
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
