Add LocationModule + AutoIndexModule (deactivated by default) to server configuration

--- a/resources/templates/etc/appserver/appserver.xml.phtml
+++ b/resources/templates/etc/appserver/appserver.xml.phtml
@@ -208,7 +208,8 @@ use AppserverIo\Appserver\Meta\Composer\Script\SetupKeys;
                         <module type="\AppserverIo\WebServer\Modules\RewriteModule"/>
                         <module type="\AppserverIo\WebServer\Modules\DirectoryModule"/>
                         <module type="\AppserverIo\WebServer\Modules\AccessModule"/>
-                        <!-- module type="\AppserverIo\WebServer\Modules\AutoIndexModule"/ -->
+                        <module type="\AppserverIo\WebServer\Modules\LocationModule"/>
+                        <module type="\AppserverIo\WebServer\Modules\AutoIndexModule"/>
                         <module type="\AppserverIo\WebServer\Modules\CoreModule"/>
                         <module type="\AppserverIo\WebServer\Modules\PhpModule"/>
                         <module type="\AppserverIo\WebServer\Modules\FastCgiModule"/>
@@ -332,7 +333,8 @@ use AppserverIo\Appserver\Meta\Composer\Script\SetupKeys;
                         <module type="\AppserverIo\WebServer\Modules\RewriteModule"/>
                         <module type="\AppserverIo\WebServer\Modules\DirectoryModule"/>
                         <module type="\AppserverIo\WebServer\Modules\AccessModule"/>
-                        <!-- module type="\AppserverIo\WebServer\Modules\AutoIndexModule"/ -->
+                        <module type="\AppserverIo\WebServer\Modules\LocationModule"/>
+                        <module type="\AppserverIo\WebServer\Modules\AutoIndexModule"/>
                         <module type="\AppserverIo\WebServer\Modules\CoreModule"/>
                         <module type="\AppserverIo\WebServer\Modules\PhpModule"/>
                         <module type="\AppserverIo\WebServer\Modules\FastCgiModule"/>
