moved and refactored error, welcome and auto-index pages

--- a/resources/templates/etc/appserver/appserver.xml.phtml
+++ b/resources/templates/etc/appserver/appserver.xml.phtml
@@ -79,7 +79,7 @@ use AppserverIo\Appserver\Meta\Composer\Script\SetupKeys;
                         <param name="directoryIndex" type="string">index.mq</param>
                         <param name="keepAliveMax" type="integer">64</param>
                         <param name="keepAliveTimeout" type="integer">5</param>
-                        <param name="errorsPageTemplatePath" type="string">var/www/errors/error.phtml</param>
+                        <param name="errorsPageTemplatePath" type="string">resources/templates/www/error.phtml</param>
                     </params>
 
                     <environmentVariables>
@@ -143,9 +143,9 @@ use AppserverIo\Appserver\Meta\Composer\Script\SetupKeys;
                         <param name="keepAliveMax" type="integer">64</param>
                         <param name="keepAliveTimeout" type="integer">5</param>
                         <param name="autoIndex" type="boolean">false</param>
-                        <param name="errorsPageTemplatePath" type="string">var/www/errors/error.phtml</param>
-                        <param name="welcomePageTemplatePath" type="string">var/www/errors/welcome.phtml</param>
-                        <param name="autoIndexTemplatePath" type="string">var/www/errors/auto_index.phtml</param>
+                        <param name="errorsPageTemplatePath" type="string">resources/templates/www/error.phtml</param>
+                        <param name="welcomePageTemplatePath" type="string">resources/templates/www/welcome.phtml</param>
+                        <param name="autoIndexTemplatePath" type="string">resources/templates/www/auto_index.phtml</param>
                     </params>
 
                     <!-- An example to activate a the auto index functionality on a custom directory -->
@@ -262,9 +262,9 @@ use AppserverIo\Appserver\Meta\Composer\Script\SetupKeys;
                         <param name="keepAliveMax" type="integer">64</param>
                         <param name="keepAliveTimeout" type="integer">5</param>
                         <param name="autoIndex" type="boolean">false</param>
-                        <param name="errorsPageTemplatePath" type="string">var/www/errors/error.phtml</param>
-                        <param name="welcomePageTemplatePath" type="string">var/www/errors/welcome.phtml</param>
-                        <param name="autoIndexTemplatePath" type="string">var/www/errors/auto_index.phtml</param>
+                        <param name="errorsPageTemplatePath" type="string">resources/templates/www/error.phtml</param>
+                        <param name="welcomePageTemplatePath" type="string">resources/templates/www/welcome.phtml</param>
+                        <param name="autoIndexTemplatePath" type="string">resources/templates/www/auto_index.phtml</param>
                     </params>
 
                     <!-- An example to activate a the auto index functionality on a custom directory -->
