--- a/resources/templates/www/welcome.phtml
+++ b/resources/templates/www/welcome.phtml
@@ -1,18 +1,22 @@
 <?php
 
 /**
- * var/www/errors/welcome.phtml
+ * resources/templates/www/welcome.phtml
+ *
+ * NOTICE OF LICENSE
+ *
+ * This source file is subject to the Open Software License (OSL 3.0)
+ * that is available through the world-wide-web at this URL:
+ * http://opensource.org/licenses/osl-3.0.php
  *
  * PHP version 5
  *
- * @category   Server
- * @package    Appserver
- * @subpackage Meta
- * @author     Tim Wagner <tw@appserver.io>
- * @author     Johann Zelger <jz@appserver.io>
- * @copyright  2014 TechDivision GmbH <info@appserver.io>
- * @license    http://opensource.org/licenses/osl-3.0.php Open Software License (OSL 3.0)
- * @link       http://www.appserver.io
+ * @author    Johann Zelger <jz@appserver.io>
+ * @author    Tim Wagner <tw@appserver.io>
+ * @copyright 2015 TechDivision GmbH <info@appserver.io>
+ * @license   http://opensource.org/licenses/osl-3.0.php Open Software License (OSL 3.0)
+ * @link      https://github.com/appserver-io/appserver
+ * @link      http://www.appserver.io
  */
 
 use AppserverIo\Appserver\Meta\Composer\Script\Setup;
