Closed #743 - Move PhtmlServlet as DhtmlServlet from Routlt 2 (to avoid conflicts with simple PHTML templates) + Closed #744 - Add .dhtml file handler for ServletEngine

--- a/resources/templates/etc/appserver/appserver.xml.phtml
+++ b/resources/templates/etc/appserver/appserver.xml.phtml
@@ -233,6 +233,7 @@ use AppserverIo\Appserver\Meta\Composer\Script\SetupKeys;
                                 <param name="port" type="integer"><?php echo Setup::getValue(SetupKeys::PHP_FPM_PORT) ?></param>
                             </params>
                         </fileHandler>
+                        <fileHandler name="servlet" extension=".dhtml" />
                         <fileHandler name="servlet" extension=".do" />
                     </fileHandlers>
 
@@ -358,6 +359,7 @@ use AppserverIo\Appserver\Meta\Composer\Script\SetupKeys;
                                 <param name="port" type="integer"><?php echo Setup::getValue(SetupKeys::PHP_FPM_PORT) ?></param>
                             </params>
                         </fileHandler>
+                        <fileHandler name="servlet" extension=".dhtml" />
                         <fileHandler name="servlet" extension=".do" />
                     </fileHandlers>
 
